fix: color contrast of circleIconButton feat: color unread bar

--- a/src/modules/DNOME-extra.less
+++ b/src/modules/DNOME-extra.less
@@ -58,3 +58,25 @@ div[class*="barFill"] {
 div[class*="progressContainer"] > div > div[class*="progressBar"] {
   background-color: var(--dnome-accent) !important;
 }
+
+div[class*="isUnread"] {
+  border-color: var(--dnome-accent);
+  > span[class*="unreadPill"] {
+    background-color: var(--dnome-accent);
+    > svg > path[class*="unreadPillCap"] {
+      color: var(--dnome-accent);
+      fill: var(--dnome-accent);
+    }
+  }
+}
+
+div[class*="circleIconButton"] {
+  color: var(--dnome-accent);
+  &[class*="selected"] {
+    background-color: var(--dnome-accent) !important;
+  }
+}
+
+button[class*="buttonColor"] {
+  color: #ffffff !important;
+}
